# PLASMAALLM

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  ECOSYSTEM_CAPABILITIES.md  KDP.md  KEL.md  LICENSE  LLMBuildPrompt.md  PRACTICE.md  Plan.md  README.md  RESEARCHER.md  RESEARCHER_PHILOSOPHY.md  Roadmap.md  VISUALS_M7.md  answers.md  assitensMessage.md  docker-compose.yml  pyproject.toml  smallVision.md
books/: README.md
configs/: allm.yaml
docs/: Roadmap-v0.md  architecture.md  client-guide.md  deploy.md  openapi.json  quickstart.md  releasing.md  security-review.md  wire-format.json  wire-format.md
examples/: 01_infrastructure_tour.py  02_teacher_evaluates_students.py  03_students_learn_from_failure.py  04_learning_roadmap.py  05_knowledge_graph.py  06_continuous_learning_loop.py  06_continuous_learning_loop_real.py  07_kdp_distillation.py  08_kel_evaluation.py  09_evidence_and_proposals.py  10_generative_exam_real.py  11_generative_learning_loop_real.py  12_trainer_ablation.py  13_kids_transcripts_kdp.py  14_kids_teaching_digest.py  15_kids_corpus_graph.py  16_kids_learning_loop.py  17_kids_trainer_ablation.py  18_kids_heldout_loop.py  19_kids_kel_steered_loop.py  20_analyze_learning_history.py  21_specialist_routing.py  22_identity_ablation.py  23_dual_specialist_ablation.py  24_peer_consultation.py  25_researcher_cycle.py  26_mediated_consultation.py  27_researcher_kel_loop.py  28_researcher_kel_metrics.py  29_mediated_dual_loop.py  30_kids_topic_alignment.py  31_research_plan_cycle.py  32_ecosystem_targeting.py  33_researcher_brain_cycle.py  (+51 more)
(+471 files in other folders)
