[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "allm"
version = "0.1.0"
description = "Autonomous Learning Language Model - an experimental research platform for autonomous learning in language models."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PlasmaALLM" }]
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Heavy ML stack. Everything in src/allm imports these lazily, so the
# infrastructure (Phase 1) works and tests pass without them installed.
ml = [
    "torch>=2.3",
    "transformers>=4.44",
    "datasets>=2.20",
    "accelerate>=0.33",
    "peft>=0.12",
]
embeddings = [
    "sentence-transformers>=3.0",
]
memory = [
    "chromadb>=0.5",
]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]
livekit = [
    "livekit>=0.17",
    "Pillow>=10.0",
]
books = [
    "pypdf>=4.0",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",  # FastAPI TestClient transport
]

[project.scripts]
allm = "allm.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not slow'"
markers = [
    "slow: full-corpus integration tests (22 workshop transcripts)",
]
